--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,7 @@
         "stopOnEntry": true,
         "cwd": "${fileDirname}",
         "port": 9000,
-        "runtimeExecutable": "C:\\wamp64\\bin\\php\\php7.2.14\\php.exe"
+        "runtimeExecutable": "php.exe"
         //C:\\wamp64\\bin\\php\\php7.2.14\\php.exe
         //"D:\\wamp64\\bin\\php\\php7.2.10\\php.exe"
       }
